sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:5: error: not found: value i
  while(i+1<getNombreValeurs())
        ^AlgGnomeSort:7: error: not found: value i
    i=0;
    ^AlgGnomeSort:8: error: not found: value i
    while(plusPetit(i,i+1) && i+1<getNombreValeurs())
                    ^AlgGnomeSort:8: error: not found: value i
    while(plusPetit(i,i+1) && i+1<getNombreValeurs())
                      ^AlgGnomeSort:8: error: not found: value i
    while(plusPetit(i,i+1) && i+1<getNombreValeurs())
                              ^AlgGnomeSort:10: error: not found: value i
      i=i+1;
      ^AlgGnomeSort:11: error: not found: value j
      j=j+1;
      ^AlgGnomeSort:13: error: not found: value i
    echange(i,i+1);
            ^AlgGnomeSort:13: error: not found: value i
    echange(i,i+1);
              ^